resolved layout issue in footer on media query

--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -26,11 +26,9 @@
 }
 
 .footer__container {
-  width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, minmax(400px, 1fr));
+  grid: auto-flow / repeat(3, minmax(400px, 1fr));
   justify-content: space-around;
-  grid-auto-flow: row;
 }
 
 .contact__info {
@@ -41,18 +39,24 @@
 }
 
 .contact__list {
-  margin-bottom: 2rem;
+  margin-bottom: 1.8rem;
+  margin-left: 4rem;
 }
 
 .contact__list li {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto 1fr;
   align-items: center;
-  justify-content: flex-start;
   gap: 1rem;
-  text-align: left;
   letter-spacing: 1.12px;
+  &:first-child {
+    align-items: start;
+    i {
+      padding-top: 0.28rem;
+    }
+    
+  }
 }
-
 
 .contact__list li p span {
   display: block;
@@ -93,7 +97,6 @@
 .hours {
   display: flex;
   flex-direction: column;
-  grid-column: 3;
   ul li {
     display: flex;
     justify-content: space-between;
@@ -104,9 +107,12 @@
 
 @media screen and (max-width: 1200px) {
   .footer__container {
-    align-items: start;
-    grid-template-columns: 1fr;
-    grid-auto-flow: row;
+    grid-template-columns: minmax(400px, 1fr);
+    margin-bottom: 3rem;
+  }
+  .page__links,
+  .hours {
+    margin: 0;
   }
 }
 /*
@@ -141,7 +147,6 @@
   text-decoration-skip-ink: auto;
 }
 
-
 .contact__list li {
   justify-content: center;
 }
@@ -155,4 +160,3 @@
 .hours p {
   align-self: center;
 }
-
