--- a/src/Components/components.css
+++ b/src/Components/components.css
@@ -110,75 +110,69 @@
   }
 }
 
-
-
-  /*/////////////////////LABELS ////////////////////////*/
-  .label {
-    position: relative;
-    display: block;
-    padding: 1em;
-    background: linear-gradient(
-      to bottom,
-      rgba(254, 254, 254, 1) 0%,
-      rgba(209, 209, 209, 1) 50%,
-      rgba(219, 219, 219, 1) 55%,
-      rgba(226, 226, 226, 1) 100%
-    );
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid rgba(#0000, 0.15);
-    font-size: 1.5em;
-    text-shadow: 0 1px 0 rgba(#fff, 0.75);
-    color: var(--med-grey);
-    cursor: pointer;
-    transition: all var(--timing) var(--ease);
-    &::after {
-      content: '+';
-      position: absolute;
-      right: 1em;
-      width: 1em;
-      height: 1em;
-      line-height: 0.98em;
-      color: var(--c-light-grey);
-      text-align: center;
-      border-radius: 50%;
-      background: var(--c-background);
-      box-shadow: inset 0 1px 6px rgba(#000, 0.5), 0 1px 0 #fff;
-      text-shadow: 0 1px 0 rgba(#000, 0.75);
-    }
-    &:hover {
-      color: var(--c-highlight-color);
-    }
-  }
-
-  .answer {
-    overflow: hidden;
-    max-height: 0em;
-    position: relative;
-    padding: 0 1.5em;
-    box-shadow: inset 4px 0 0 0 var(--c-hightlight-color),
-      inset 0 3px 6px rgba(#000, 0.75);
-    background: var(--c-dark-grey);
-    background: linear-gradient(
-      to bottom,
-      rgba(68, 68, 68, 1) 0%,
-      rgba(34, 34, 34, 1) 100%
-    );
+/*/////////////////////LABELS ////////////////////////*/
+.label {
+  position: relative;
+  display: block;
+  padding: 1em;
+  background: linear-gradient(
+    to bottom,
+    rgba(254, 254, 254, 1) 0%,
+    rgba(209, 209, 209, 1) 50%,
+    rgba(219, 219, 219, 1) 55%,
+    rgba(226, 226, 226, 1) 100%
+  );
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid rgba(#0000, 0.15);
+  font-size: 1.5em;
+  text-shadow: 0 1px 0 rgba(#fff, 0.75);
+  color: var(--med-grey);
+  cursor: pointer;
+  transition: all var(--timing) var(--ease);
+  &::after {
+    content: '+';
+    position: absolute;
+    right: 1em;
+    width: 1em;
+    height: 1em;
+    line-height: 0.98em;
     color: var(--c-light-grey);
-    transition: all var(--timing) var(--ease);
-    &:not(:last-of-type) {
-      box-shadow: inset 0 -2px 2px rgba(#000, 0.25),
-        inset 4px 0 0 0 var(--c-hightlight-color),
-        inset 0 3px 6px rgba(#000, 0.75);
-    }
-    p {
-      font-size: 0.825em;
-      line-height: 1.7em;
-      padding-block: 1.5em;
-      margin: 0;
-      text-align: left;
-    }
+    text-align: center;
+    border-radius: 50%;
+    background: var(--c-background);
+    box-shadow: inset 0 1px 6px rgba(#000, 0.5), 0 1px 0 #fff;
+    text-shadow: 0 1px 0 rgba(#000, 0.75);
+  }
+  &:hover {
+    color: var(--c-highlight-color);
   }
 }
 
-
-
+.answer {
+  overflow: hidden;
+  max-height: 0em;
+  position: relative;
+  padding: 0 1.5em;
+  box-shadow: inset 4px 0 0 0 var(--c-hightlight-color),
+    inset 0 3px 6px rgba(#000, 0.75);
+  background: var(--c-dark-grey);
+  background: linear-gradient(
+    to bottom,
+    rgba(68, 68, 68, 1) 0%,
+    rgba(34, 34, 34, 1) 100%
+  );
+  color: var(--c-light-grey);
+  transition: all var(--timing) var(--ease);
+  &:not(:last-of-type) {
+    box-shadow: inset 0 -2px 2px rgba(#000, 0.25),
+      inset 4px 0 0 0 var(--c-hightlight-color),
+      inset 0 3px 6px rgba(#000, 0.75);
+  }
+  p {
+    font-size: 0.825em;
+    line-height: 1.7em;
+    padding-block: 1.5em;
+    margin: 0;
+    text-align: left;
+  }
+}
